--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -4,18 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css"> <!-- Correct path -->
 </head>
 <body>
     <div class="container">
         <h1>Admin Dashboard</h1>
-        <!-- Back Button -->
-        <div style="text-align: center; margin-bottom: 20px;">
-            <button onclick="window.location.href='index.html'" style="background-color: #0072ff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">
-                Back to Appointment Page
-            </button>
-        </div>
-
         <table>
             <thead>
                 <tr>
@@ -26,16 +19,15 @@
                     <th>Date</th>
                     <th>Time</th>
                     <th>Status</th>
-                    <th>Actions</th>
                 </tr>
             </thead>
-            <tbody id="appointmentsBody">
-                <!-- Appointments will be loaded here -->
+            <tbody id="appointmentsTable">
+                <!-- Appointments will be dynamically added here -->
             </tbody>
         </table>
     </div>
 
-    <!-- Load admin_dashboard.js -->
-    <script src="admin_dashboard.js"></script>
+    <!-- Load script.js -->
+    <script src="/script.js"></script> <!-- Correct path -->
 </body>
 </html>
