--- a/public/index.html
+++ b/public/index.html
@@ -3,47 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Appointment Booking</title>
-    <link rel="stylesheet" href="/styles.css"> <!-- Correct path -->
+    <title>Main Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Book Your Appointment</h1>
-        <form id="appointmentForm">
-            <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Enter your name" required>
-
-            <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Enter your email" required>
-
-            <label for="phone">Phone</label>
-            <input type="tel" id="phone" placeholder="Enter your phone number" required>
-
-            <label for="service">Service</label>
-            <select id="service" required>
-                <option value="Consultation">Consultation</option>
-                <option value="X-Ray">X-Ray</option>
-                <option value="ECG">ECG</option>
-            </select>
-
-            <label for="date">Date</label>
-            <input type="date" id="date" required>
-
-            <label for="time">Time</label>
-            <input type="time" id="time" required>
-
-            <button type="submit">Book Appointment</button>
-        </form>
-
-        <!-- Add a button to the Admin Dashboard -->
-        <div style="text-align: center; margin-top: 20px;">
-            <button onclick="checkPassword()" style="background-color: #0072ff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">
-                Go to Admin Dashboard
-            </button>
-        </div>
-    </div>
-
-    <!-- Load script.js -->
-    <script src="/script.js"></script> <!-- Correct path -->
+    <h1>Welcome to the Main Page</h1>
+    <!-- Button to Navigate to Admin Dashboard -->
+    <a href="admin_dashboard.html" class="return-button">Go to Admin Dashboard</a>
 </body>
 </html>
