--- a/public/admin_dashboard.html
+++ b/public/admin_dashboard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Admin Dashboard</h1>
-    <!-- Return Button (Now links to index.html) -->
+    <!-- Return Button (Links to index.html) -->
     <a href="index.html" class="return-button">Return to Main Page</a>
 
     <!-- Table to Display Data -->
