--- a/public/index.html
+++ b/public/index.html
@@ -3,56 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page - Appointment System</title>
-    <!-- Link to the stylesheet -->
+    <title>Book Appointment</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Optional: Add a favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <!-- Header Section -->
-    <header>
-        <h1>Welcome to the Appointment System</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="admin_dashboard.html">Admin Dashboard</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="container">
+        <h1>Book Your Appointment</h1>
+        <form id="appointmentForm">
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="Enter your name" required>
 
-    <!-- Main Content Section -->
-    <main>
-        <section id="welcome">
-            <h2>About Us</h2>
-            <p>Welcome to our appointment scheduling system. Manage your appointments efficiently with our easy-to-use platform.</p>
-            <a href="admin_dashboard.html" class="return-button">Go to Admin Dashboard</a>
-        </section>
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Enter your email" required>
 
-        <section id="services">
-            <h2>Our Services</h2>
-            <ul>
-                <li>Appointment Scheduling</li>
-                <li>Customer Management</li>
-                <li>Real-Time Notifications</li>
-                <li>Reporting and Analytics</li>
-            </ul>
-        </section>
+            <label for="phone">Phone</label>
+            <input type="tel" id="phone" placeholder="Enter your phone number" required>
 
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>If you have any questions, feel free to reach out to us:</p>
-            <p>Email: <a href="mailto:support@appointmentsystem.com">support@appointmentsystem.com</a></p>
-            <p>Phone: +60167051852</p>
-        </section>
-    </main>
+            <label for="service">Service</label>
+            <select id="service" required>
+                <option value="Consultation">Consultation</option>
+                <option value="X-Ray">X-Ray</option>
+                <option value="ECG">ECG</option>
+            </select>
 
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2023 Appointment System. All rights reserved.</p>
-        <p>Follow us on <a href="https://www.facebook.com/bookyourappointment/" target="_blank">Facebook</a>.</p>
-    </footer>
+            <label for="date">Date</label>
+            <input type="date" id="date" required>
+
+            <label for="time">Time</label>
+            <input type="time" id="time" required>
+
+            <button type="submit">Book Appointment</button>
+        </form>
+
+        <!-- Button to Access Admin Dashboard -->
+        <div style="text-align: center; margin-top: 20px;">
+            <button onclick="checkPassword()" style="background-color: #0072ff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">
+                Go to Admin Dashboard
+            </button>
+        </div>
+    </div>
+
+    <!-- Load script.js -->
+    <script src="script.js"></script>
 </body>
 </html>
