--- a/public/admin_dashboard.html
+++ b/public/admin_dashboard.html
@@ -35,7 +35,7 @@
         </table>
     </div>
 
-    <!-- Load admin_dashboard.js -->
+    <!-- Load admin_dashboard.js from the public folder -->
     <script src="admin_dashboard.js"></script>
 </body>
 </html>
