--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Appointment</title>
+    <title>Appointment Booking</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
             <button type="submit">Book Appointment</button>
         </form>
 
-        <!-- Button to Access Admin Dashboard -->
+        <!-- Add a button to the Admin Dashboard -->
         <div style="text-align: center; margin-top: 20px;">
             <button onclick="checkPassword()" style="background-color: #0072ff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">
                 Go to Admin Dashboard
