--- a/public/admin_dashboard.html
+++ b/public/admin_dashboard.html
@@ -11,9 +11,7 @@
         <h1>Admin Dashboard</h1>
         <!-- Back Button -->
         <div style="text-align: center; margin-bottom: 20px;">
-            <button onclick="window.location.href='index.html'" style="background-color: #0072ff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">
-                Back to Appointment Page
-            </button>
+            <button onclick="window.location.href='index.html'">Back to Appointment Page</button>
         </div>
 
         <table>
