--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,7 @@
 
         <!-- Add a button to the Admin Dashboard -->
         <div style="text-align: center; margin-top: 20px;">
-            <button onclick="checkPassword()" style="background-color: #0072ff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">
-                Go to Admin Dashboard
-            </button>
+            <button onclick="checkPassword()">Go to Admin Dashboard</button>
         </div>
     </div>
 
