--- a/public/admin_dashboard.html
+++ b/public/admin_dashboard.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Add Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <h1>Admin Dashboard</h1>
         <!-- Back Button -->
         <div style="text-align: center; margin-bottom: 20px;">
-            <button onclick="window.location.href='index.html'">Back to Appointment Page</button>
+            <button onclick="window.location.href='index.html'" style="background-color: #0072ff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">
+                Back to Appointment Page
+            </button>
         </div>
 
         <table>
