--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,10 @@
             <input type="date" id="date" required>
 
             <label for="time">Time</label>
-            <input type="time" id="time" required>
+            <select id="time" required>
+                <!-- Time slots will be dynamically populated here -->
+                <option value="">Select a date first</option>
+            </select>
 
             <button type="submit">Book Appointment</button>
         </form>
