--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Book Your Appointment</h1>
+        <h1>Aust.Perdana_Mediviron Appointment Booking</h1>
         <form id="appointmentForm">
             <label for="name">Name</label>
             <input type="text" id="name" placeholder="Enter your name" required>
