--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,10 @@
             <label for="service">Service</label>
             <select id="service" required>
                 <option value="Consultation">Consultation</option>
+                <option value="Ent_Specialist">Ent_Specialist</option>
                 <option value="X-Ray">X-Ray</option>
-                <option value="ECG">ECG</option>
+                <option value="Blood_Test">Blood_Test</option>
+                <option value="Medical_Checkup">Medical_Checkup</option>
             </select>
 
             <label for="date">Date</label>
